--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#003580</color>
+    <color name="light_blue">#009FE3</color>
+    <color name="yellow">#FEBA02</color>
+    <color name="grey">#666666</color>
+    <color name="light_grey">#B0B0B0</color>
 </resources>
