--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,6 +18,7 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/tv_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
