--- a/app/src/main/res/layout/activity_personality.xml
+++ b/app/src/main/res/layout/activity_personality.xml
@@ -32,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edt_personality"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine" />
